<resources>
    <string name="enter_title">Enter Title</string>
    <string name="title">Title</string>
    <string name="enter_description">Enter Description</string>
    <string name="description">Description</string>
    <string name="time">Time</string>
    <string name="time_hint">HH:MM</string>
    <string name="date">Date</string>
    <string name="date_hint">dd-MM-yyyy</string>
    <string name="type">Type</string>
    <string name="daily">Daily</string>
    <string name="weekly">Weekly</string>
    <string name="create_todo">Create Todo</string>
    <string name="update_todo">Update ToDo</string>
    <string name="enter_email">Enter Email</string>
    <string name="email">email</string>
    <string name="enter_password">Enter password</string>
    <string name="password">password</string>
    <string name="login">Login</string>
    <string name="no_todo">No Todos available!!!</string>
    <string name="add_new_todo">Add New Todo</string>
    <string name="successfully_added">Successfully Added</string>
    <string name="title_desc">Title and Description must be non-empty</string>
    <string name="home">Home</string>
    <string name="logout">Logout</string>
    <string name="logout_msg">Are you sure you want to Logout?</string>
    <string name="ok">OK</string>
    <string name="logout_desc">Logged Out..!!</string>
    <string name="cancel">Cancel</string>
    <string name="delete_msg">Are you sure want to Delete?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="delete_successfully">Deleted Successfully</string>
    <string name="please_enter_email">Please enter email address</string>
    <string name="invalid_email">Invalid email address</string>
    <string name="please_enter_password">Please enter password</string>
    <string name="loading">Loading.....</string>
    <string name="login_success">Login Success</string>
    <string name="login_failed">Login Failed</string>
    <string name="update_task">Update Task</string>
    <string name="item_updated">Item Updated Successfully</string>
    <string name="update_failed">Update Failed</string>
    <string name="fill_fields">Please fill out all fields</string>
    <string name="desc_comes_here">Description comes here</string>
</resources>