<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#fff">

        <TextView
            android:id="@+id/textTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="10dp"
            android:fontFamily="@font/averiasanslibre_bold"
            android:text="@string/enter_title"
            android:textColor="@color/black"
            android:textSize="@dimen/small_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <EditText
            android:id="@+id/evTodoTitle"
            android:layout_width="match_parent"
            android:layout_height="@dimen/edittext_height"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/edit_text_shape"
            android:fontFamily="@font/averiasanslibre_bold"
            android:gravity="center|start"
            android:hint="@string/title"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:textColor="@color/black"
            android:textColorHint="@color/hint_color"
            android:textSize="@dimen/normal_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textTitle" />


        <TextView
            android:id="@+id/textDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="10dp"
            android:fontFamily="@font/averiasanslibre_bold"
            android:text="@string/enter_description"
            android:textColor="@color/black"
            android:textSize="@dimen/small_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/evTodoTitle" />


        <EditText
            android:id="@+id/evTodoDescription"
            android:layout_width="match_parent"
            android:layout_height="@dimen/edittext_height"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/edit_text_shape"
            android:fontFamily="@font/averiasanslibre_bold"
            android:gravity="center|start"
            android:hint="@string/description"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:textColor="@color/black"
            android:textColorHint="@color/hint_color"
            android:textSize="@dimen/normal_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textDescription" />


        <TextView
            android:id="@+id/textTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="10dp"
            android:fontFamily="@font/averiasanslibre_bold"
            android:text="@string/time"
            android:textColor="@color/black"
            android:textSize="@dimen/small_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/evTodoDescription" />


        <TextView
            android:id="@+id/todoTime"
            android:layout_width="match_parent"
            android:layout_height="@dimen/edittext_height"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/edit_text_shape"
            android:fontFamily="@font/averiasanslibre_bold"
            android:gravity="center|start"
            android:hint="@string/time_hint"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:textColor="@color/black"
            android:textColorHint="@color/hint_color"
            android:textSize="@dimen/normal_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textTime" />

        <TextView
            android:id="@+id/textDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="10dp"
            android:fontFamily="@font/averiasanslibre_bold"
            android:text="@string/date"
            android:textColor="@color/black"
            android:textSize="@dimen/small_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/todoTime" />


        <TextView
            android:id="@+id/todoDate"
            android:layout_width="match_parent"
            android:layout_height="@dimen/edittext_height"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/edit_text_shape"
            android:fontFamily="@font/averiasanslibre_bold"
            android:gravity="center|start"
            android:hint="@string/date_hint"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:textColor="@color/black"
            android:textColorHint="@color/hint_color"
            android:textSize="@dimen/normal_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textDate" />


        <TextView
            android:id="@+id/textType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/averiasanslibre_bold"
            android:text="@string/type"
            android:textColor="@color/black"
            android:textSize="@dimen/small_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/todoDate" />

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textType">

            <RadioButton
                android:id="@+id/radioDaily"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:buttonTint="@color/black"
                android:checked="false"
                android:fontFamily="@font/averiasanslibre_bold"
                android:text="@string/daily"
                android:textColor="@color/black"
                android:textSize="@dimen/normal_text" />

            <RadioButton
                android:id="@+id/radioWeekly"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="10dp"
                android:buttonTint="@color/black"
                android:checked="false"
                android:fontFamily="@font/averiasanslibre_bold"
                android:text="@string/weekly"
                android:textColor="@color/black"
                android:textSize="@dimen/normal_text" />
        </RadioGroup>

        <Button
            android:id="@+id/btnSaveTodo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/button_capsule_shape"
            android:fontFamily="@font/averiasanslibre_bold"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:text="@string/create_todo"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/normal_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>