<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#fff">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/textEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="1dp"
                android:layout_marginEnd="10dp"
                android:fontFamily="@font/averiasanslibre_bold"
                android:text="@string/enter_email"
                android:textColor="@color/black"
                android:textSize="@dimen/small_text" />


            <EditText
                android:id="@+id/evTodoEmail"
                android:layout_width="match_parent"
                android:layout_height="@dimen/edittext_height"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:background="@drawable/edit_text_shape"
                android:fontFamily="@font/averiasanslibre_bold"
                android:gravity="center|start"
                android:hint="@string/email"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:textColor="@color/black"
                android:textColorHint="@color/hint_color"
                android:textSize="@dimen/normal_text" />

            <TextView
                android:id="@+id/textPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="10dp"
                android:fontFamily="@font/averiasanslibre_bold"
                android:text="@string/enter_password"
                android:textColor="@color/black"
                android:textSize="@dimen/small_text" />


            <EditText
                android:id="@+id/evTodoPassword"
                android:layout_width="match_parent"
                android:layout_height="@dimen/edittext_height"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:background="@drawable/edit_text_shape"
                android:fontFamily="@font/averiasanslibre_bold"
                android:gravity="center|start"
                android:hint="@string/password"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:password="true"
                android:textColor="@color/black"
                android:textColorHint="@color/hint_color"
                android:textSize="@dimen/normal_text" />


            <Button
                android:id="@+id/btnLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:background="@drawable/button_capsule_shape"
                android:fontFamily="@font/averiasanslibre_bold"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:text="@string/login"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="@dimen/normal_text" />


        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>